--- a/index.html
+++ b/index.html
@@ -2,11 +2,61 @@
 
 <head>
     <title>Fabric.js tutorial</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <canvas></canvas>
+    <canvas id="c" width="500" height="500" style="border: 1px solid rgb(170, 170, 170); position: absolute; width: 500px; height: 500px; right: 10px; -webkit-user-select: none;"></canvas>
+
+    <div style="display: inline-block; margin-left: 10px">
+        <button id="drawing-mode" class="btn btn-info">Cancel drawing mode</button>
+        <br>
+        <button id="clear-canvas" class="btn btn-info">Clear</button>
+        <br>
+
+        <div id="drawing-mode-options">
+            <label for="drawing-mode-selector">Mode:</label>
+            <select id="drawing-mode-selector">
+                <option>Pencil</option>
+                <option>Circle</option>
+                <option>Spray</option>
+                <option>Pattern</option>
+
+                <option>hline</option>
+                <option>vline</option>
+                <option>square</option>
+                <option>diamond</option>
+                <option>texture</option>
+            </select>
+            <br>
+
+            <label for="drawing-line-width">Line width:</label>
+            <span class="info">6</span>
+            <input type="range" value="30" min="0" max="150" id="drawing-line-width">
+            <br>
+
+            <label for="drawing-color">Line color:</label>
+            <input type="color" value="#005E7A" id="drawing-color">
+            <br>
+
+            <label for="drawing-shadow-color">Shadow color:</label>
+            <input type="color" value="#005E7A" id="drawing-shadow-color">
+            <br>
+
+            <label for="drawing-shadow-width">Shadow width:</label>
+            <span class="info">46</span>
+            <input type="range" value="0" min="0" max="50" id="drawing-shadow-width">
+            <br>
+
+            <label for="drawing-shadow-offset">Shadow offset:</label>
+            <span class="info">19</span>
+            <input type="range" value="0" min="0" max="50" id="drawing-shadow-offset">
+            <br>
+        </div>
+    </div>
+
     <script type="text/javascript" src="bower_components/fabric.js/dist/fabric.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
